--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -8,5 +8,8 @@ jobs:
     name: Checks if this action works
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: /testAction
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 20
+      - uses: actions/checkout@v4
+      - uses: ./testAction
