--- a/testAction/action.yml
+++ b/testAction/action.yml
@@ -4,7 +4,7 @@ author: "Wk"
 
 runs:
   using: "node20"
-  main: "dist/index.js"
+  main: "npm run build && dist/index.js"
 inputs:
   name:
     description: "The name of the person to greet"
