--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -8,8 +8,18 @@ jobs:
     name: Checks if this action works
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-node@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
           node-version: 20
-      - uses: actions/checkout@v4
+
+      - name: Install dependencies and build
+        run: |
+          cd testAction
+          npm install
+          npm run build
+
       - uses: ./testAction
